<resources>
    <string name="app_name">I\'m the Solution</string>
    <string name="Tv_NowPlaying">Now Playing:</string>
    <string name="Repeat">Repeat</string>
    <string name="Loop">Loop</string>
    <string name="Random">Random</string>
    <string name="Setting">Setting</string>
    <string name="ChooseDir">Choose Dir</string>
    <string name="SAF">SAF</string>
    <string name="IsPlaying">Playing - </string>
    <string name="IsPause">Pause - </string>
    <string name="List">Music List</string>
    <string name="IDK">I don\'t know what to write in this place</string>
    <string name="Hw">Yes. I printed a \"Hello World\" in log</string>
    <string name="authorize">Please authorize first</string>
    <string name="goto_foreground">If your player cannot play in background, look here.</string>
    <string name="goto_permission">If your player cannot list your music, look here.</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="control">control</string>
    <string name="notification">Notification permission</string>
    <string name="media">Media manage permission</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="backup">Restart backup</string>
</resources>