<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rdb">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Setting"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="83dp" />
        </Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:text="@string/ChooseDir"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/Btn_OpenSaf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/SAF"
                            android:background="@drawable/fab"
                            android:backgroundTint="#424242"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:layout_weight="1"
                        android:background="@drawable/line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/Tv_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:alpha="0.5"
                            android:text="@string/notification"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/Btn_OpenNotification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/Setting"
                            android:background="@drawable/fab"
                            android:backgroundTint="#424242"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:background="@drawable/line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/Tv_media"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:alpha="0.5"
                            android:text="@string/media"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/Btn_OpenSetting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/Setting"
                            android:background="@drawable/fab"
                            android:backgroundTint="#424242"/>
                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:background="@drawable/line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:alpha="0.5"
                            android:text="@string/backup"
                            android:textSize="16sp" />

                        <Switch
                            android:id="@+id/Sw_Backup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:background="@drawable/line"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8sp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="1"
                            android:text="@string/IDK"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/Btn_HW"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Button"
                            android:background="@drawable/fab"
                            android:backgroundTint="#424242"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:layout_weight="1"
                        android:background="@drawable/line"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>