<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rdb">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:textSize="20sp" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/rd"
        android:backgroundTint="#3fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/Tv_NowPlaying"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Tv_NowPlayingName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textSize="18sp" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Tv_Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:includeFontPadding="true"
                    android:text="00:00/00:00"
                    android:typeface="monospace" />

                <SeekBar
                    android:id="@+id/Sb_Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rd"
                    android:backgroundTint="#3000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/Btn_Sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@drawable/sync"
                    android:background="@drawable/fab"
                    android:padding="8dp"
                    android:backgroundTint="#77424242"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/left" />

                        <SeekBar
                            android:id="@+id/Sb_Left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rd"
                            android:backgroundTint="#3000"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="0"
                            android:text="@string/right" />

                        <SeekBar
                            android:id="@+id/Sb_Right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rd"
                            android:backgroundTint="#3000"/>
                    </LinearLayout>
                </FrameLayout>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="0">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/Sw_Loop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Loop"
                            android:background="@drawable/fab"
                            android:padding="6dp"
                            android:backgroundTint="#77424242"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="4dp"
                            android:background="@drawable/line" />

                        <Switch
                            android:id="@+id/Sw_Random"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Random"
                            android:background="@drawable/fab"
                            android:padding="6dp"
                            android:backgroundTint="#77424242"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="4dp"
                            android:background="@drawable/line" />

                        <Switch
                            android:id="@+id/Sw_Repeat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Repeat"
                            android:background="@drawable/fab"
                            android:padding="6dp"
                            android:backgroundTint="#77424242"/>

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Btn_Previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/previous"
                android:background="@drawable/fab"
                android:padding="8dp"
                android:backgroundTint="#77424242"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/Btn_Contrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/play"
                android:background="@drawable/fab"
                android:padding="8dp"
                android:backgroundTint="#77424242"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/Btn_Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/next"
                android:background="@drawable/fab"
                android:padding="8dp"
                android:backgroundTint="#77424242"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/List"
                    android:textSize="16sp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/rd"
                android:backgroundTint="#3000">

                <LinearLayout
                    android:id="@+id/Linear_List"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <ImageButton
        android:id="@+id/Fab_Setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:background="@drawable/fab"
        android:layout_gravity="bottom|end"
        android:padding="24dp"
        android:src="@drawable/menu"/>

</LinearLayout>